--- a/index.html
+++ b/index.html
@@ -44,6 +44,11 @@
             <li>2020 - 2023: Educación Preparatoria en Colegio Obregón</li>
             <li>2023 - Actualidad: Carrera de Ingeniería de Software en ITSON</li>
         </ul>
+        <h3>Idiomas</h3>
+        <ol>
+          <li>Español - Nativo</li>
+          <li>Inglés - B1</li>
+        </ol>
       </section>
       <section>
         <h3>Experiencia laboral</h3>
