--- a/interests.html
+++ b/interests.html
@@ -1,46 +1,61 @@
-<Doctype html>
-  <html>
-    <head>
-      <title>Curriculum</title>
-      <meta charset="utf-8" />
-    </head>
-    <body>
-        <header>
-            <a href="index.html">Curriculum</a>
-            <a href="interests.html">Intereses</a>  
-            <a href="schedule.html">Horario</a>
-        </header>
-        <section>
-            <h3>Intereses</h3>
-            <p>Mi intereses personales son los siguientes:</p>
-            <ul>
-                <li>Programar</li>
-                <li>Leer</li>
-                <li>Escribir</li>
-                <li>Música</li>
-                <li>Arte</li>
-                <li>Ver atardeceres</li>
-                <li>Ir al gimnasio</li>
-                <li>Jugar videojuegos</li>
-                <li>Hacer compras innecesarias por AliExpress</li>
-              </ul>
-                <p>Mi intereses profesionales son los siguientes:</p>
-                <ul>
-                    <li>Programar</li>
-                    <li>Graduarme de la Carrera</li>
-                    <li>Trabajar en proyectos, tanto personales como profesionales</li>
-                    <li>Hacer cursos</li>
-                    <li>Aprender nuevas tecnologías</li>
-                    <li>Seguir una ruta de aprendizaje en backend</li>
-                    <li>Conseguir un trabajo con un equipo de desarrollo</li>
-                    <li>Crecer mi carrera profesional</li>
-                  </ul>
-        <footer>
-            <a href="https://github.com/TRMrDucky">GitHub</a>
-            <a href="https://www.threads.com/joserra_u.u/">Threads</a>
-            <a href="https://instagram.com/joserra_u.u">Instagram</a><br>
-            José Ramón Reynaga Núñez - Septiembre 2025
-        </footer>
-    </body>
-  </html></Doctype
->
+<!DOCTYPE html>
+<html>
+  <head>
+    <meta charset="utf-8" />
+    <title>Intereses</title>
+    <link rel="stylesheet" href="./styles/global.css" />
+    <link rel="stylesheet" href="./styles/styles.css" />
+  </head>
+  <body>
+    <header>
+      <nav>
+        <a href="index.html" class="nav-link">Curriculum</a>
+        <a href="interests.html" class="nav-link">Intereses</a>
+        <a href="schedule.html" class="nav-link">Horario</a>
+      </nav>
+    </header>
+
+    <main>
+      <h1>Intereses</h1>
+      <section>
+        <h2>Personales</h2>
+        <p>Mis intereses personales son los siguientes:</p>
+        <ul class="interests-list">
+          <li>Programar</li>
+          <li>Leer</li>
+          <li>Escribir</li>
+          <li>Música</li>
+          <li>Arte</li>
+          <li>Ver atardeceres</li>
+          <li>Ir al gimnasio</li>
+          <li>Jugar videojuegos</li>
+          <li>Hacer compras innecesarias por AliExpress</li>
+        </ul>
+      </section>
+
+      <section>
+        <h2>Profesionales</h2>
+        <p>Mis intereses profesionales son los siguientes:</p>
+        <ul class="interests-list">
+          <li>Programar</li>
+          <li>Graduarme de la carrera</li>
+          <li>Trabajar en proyectos, tanto personales como profesionales</li>
+          <li>Hacer cursos</li>
+          <li>Aprender nuevas tecnologías</li>
+          <li>Seguir una ruta de aprendizaje en backend</li>
+          <li>Conseguir un trabajo con un equipo de desarrollo</li>
+          <li>Crecer mi carrera profesional</li>
+        </ul>
+      </section>
+    </main>
+
+    <footer>
+      <a href="https://github.com/TRMrDucky">GitHub</a> |
+      <a href="https://www.threads.com/joserra_u.u/">Threads</a> |
+      <a href="https://instagram.com/joserra_u.u">Instagram</a>
+      <p class="footer-note">
+        José Ramón Reynaga Núñez - Septiembre 2025
+      </p>
+    </footer>
+  </body>
+</html>
