--- a/schedule.html
+++ b/schedule.html
@@ -1,16 +1,24 @@
-<Doctype html>
-  <html>
-    <head>
-      <title>Curriculum</title>
-      <meta charset="utf-8" />
-    </head>
-    <body>
-      <header>
-        <a href="index.html">Curriculum</a>
-        <a href="interests.html">Intereses</a>
-        <a href="schedule.html">Horario</a>
-      </header>
-      <table>
+<!DOCTYPE html>
+<html>
+  <head>
+    <meta charset="utf-8" />
+    <title>Horario</title>
+    <link rel="stylesheet" href="./styles/global.css" />
+    <link rel="stylesheet" href="./styles/styles.css" />
+  </head>
+  <body>
+    <header>
+      <nav>
+        <a href="index.html" class="nav-link">Curriculum</a>
+        <a href="interests.html" class="nav-link">Intereses</a>
+        <a href="schedule.html" class="nav-link">Horario</a>
+      </nav>
+    </header>
+
+    <main>
+      <h1>Mi Horario</h1>
+  
+      <table class="schedule-table">
         <thead>
           <tr>
             <th>Hora</th>
@@ -24,108 +32,63 @@
         <tbody>
           <tr>
             <td>08:00 - 09:00</td>
-            <td>Trabajo</td>
-            <td>Trabajo</td>
-            <td>Trabajo</td>
-            <td>Trabajo</td>
-            <td>Trabajo</td>
+            <td>Trabajo</td><td>Trabajo</td><td>Trabajo</td><td>Trabajo</td><td>Trabajo</td>
           </tr>
           <tr>
             <td>09:00 - 10:00</td>
-            <td>Trabajo</td>
-            <td>Trabajo</td>
-            <td>Trabajo</td>
-            <td>Trabajo</td>
-            <td>Trabajo</td>
+            <td>Trabajo</td><td>Trabajo</td><td>Trabajo</td><td>Trabajo</td><td>Trabajo</td>
           </tr>
           <tr>
             <td>10:00 - 11:00</td>
-            <td>Trabajo</td>
-            <td>Trabajo</td>
-            <td>Trabajo</td>
-            <td>Trabajo</td>
-            <td>Trabajo</td>
+            <td>Trabajo</td><td>Trabajo</td><td>Trabajo</td><td>Trabajo</td><td>Trabajo</td>
           </tr>
           <tr>
             <td>11:00 - 12:00</td>
-            <td>Trabajo</td>
-            <td>Trabajo</td>
-            <td>Trabajo</td>
-            <td>Trabajo</td>
-            <td>Trabajo</td>
+            <td>Trabajo</td><td>Trabajo</td><td>Trabajo</td><td>Trabajo</td><td>Trabajo</td>
           </tr>
           <tr>
             <td>12:00 - 13:00</td>
-            <td>Gimnasio</td>
-            <td>Gimnasio</td>
-            <td>Gimnasio</td>
-            <td>Gimnasio</td>
-            <td>Trabajo</td>
-            </tr>
-            <tr>
+            <td>Gimnasio</td><td>Gimnasio</td><td>Gimnasio</td><td>Gimnasio</td><td>Trabajo</td>
+          </tr>
+          <tr>
             <td>13:00 - 14:00</td>
-            <td>Gimnasio</td>
-            <td>Gimnasio</td>
-            <td>Gimnasio</td>
-            <td>Gimnasio</td>
-            <td>Trabajo</td>
-            </tr>
-            <tr>
+            <td>Gimnasio</td><td>Gimnasio</td><td>Gimnasio</td><td>Gimnasio</td><td>Trabajo</td>
+          </tr>
+          <tr>
             <td>14:00 - 15:00</td>
-            <td>Libre</td>
-            <td>Arquitectura</td>
-            <td>libre</td>
-            <td>Arquitectura</td>
-            <td>Trabajo</td>
-            </tr>
-            <tr>
+            <td>Libre</td><td>Arquitectura</td><td>Libre</td><td>Arquitectura</td><td>Trabajo</td>
+          </tr>
+          <tr>
             <td>15:00 - 16:00</td>
-            <td>AdProyectos</td>
-            <td>Aplicaciones Web</td>
-            <td>AdProyectos</td>
-            <td>Aplicaciones Web</td>
-            <td>Trabajo</td>
-            </tr>
-            <tr>
+            <td>AdProyectos</td><td>Aplicaciones Web</td><td>AdProyectos</td><td>Aplicaciones Web</td><td>Trabajo</td>
+          </tr>
+          <tr>
             <td>16:00 - 17:00</td>
-            <td>Requisitos</td>
-            <td>Aplicaciones Web</td>
-            <td>Requisitos</td>
-            <td>Aplicaciones Web</td>
-            <td>Gimnasio</td>
-            </tr>
-            <tr>
+            <td>Requisitos</td><td>Aplicaciones Web</td><td>Requisitos</td><td>Aplicaciones Web</td><td>Gimnasio</td>
+          </tr>
+          <tr>
             <td>17:00 - 18:00</td>
-            <td>Requisitos</td>
-            <td>Aplicaciones Web</td>
-            <td>Requisitos</td>
-            <td>Aplicaciones Web</td>
-            <td>Gimnasio</td>
-            </tr>
-              <tr>
+            <td>Requisitos</td><td>Aplicaciones Web</td><td>Requisitos</td><td>Aplicaciones Web</td><td>Gimnasio</td>
+          </tr>
+          <tr>
             <td>18:00 - 19:00</td>
-            <td>Libre</td>
-            <td>Optativa II</td>
-            <td>Libre</td>
-            <td>Ooptativa II</td>
-            <td>Libre</td>
-            </tr>
-              <tr>
+            <td>Libre</td><td>Optativa II</td><td>Libre</td><td>Optativa II</td><td>Libre</td>
+          </tr>
+          <tr>
             <td>19:00 - 20:00</td>
-            <td>Libre</td>
-            <td>Optativa II</td>
-            <td>Libre</td>
-            <td>Ooptativa II</td>
-            <td>Libre</td>
-            </tr>
+            <td>Libre</td><td>Optativa II</td><td>Libre</td><td>Optativa II</td><td>Libre</td>
+          </tr>
         </tbody>
       </table>
-      <footer>
-        <a href="https://github.com/TRMrDucky">GitHub</a>
-        <a href="https://www.threads.com/joserra_u.u/">Threads</a>
-        <a href="https://instagram.com/joserra_u.u">Instagram</a><br />
+    </main>
+
+    <footer>
+      <a href="https://github.com/TRMrDucky">GitHub</a> |
+      <a href="https://www.threads.com/joserra_u.u/">Threads</a> |
+      <a href="https://instagram.com/joserra_u.u">Instagram</a>
+      <p class="footer-note">
         José Ramón Reynaga Núñez - Septiembre 2025
-      </footer>
-    </body>
-  </html></Doctype
->
+      </p>
+    </footer>
+  </body>
+</html>
